.xmonad/xmonad.errors

xmonad.hs:13:1: error:
    Could not find module ‘XMonad.Hooks.WindowSwallowing’
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
13 | import XMonad.Hooks.WindowSwallowing
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
